# Lommis_Paper

./: .gitignore  README.md  comparison_analysis.ipynb  dashboard.ipynb  labeling_app.py  lib.py  lommis_func.py  main.ipynb  main.tex  model_evaluation.ipynb  model_training.ipynb  plots.ipynb  pyproject.toml  stats_lommis.ipynb
Excel/: ARP_LSZT_012025.xlsx  ARP_LSZT_022025.xlsx  ARP_LSZT_032025.xlsx  ~$ARP_LSZT_012025.xlsx
Excel/template/: register_BAZL_aircraft.csv  template.xlsx
Flights/012025/: 2025-01-10.parquet  2025-01-11.parquet  2025-01-13.parquet  2025-01-14.parquet  2025-01-16.parquet  2025-01-18.parquet  2025-01-22.parquet  2025-01-24.parquet  2025-01-25.parquet  2025-01-26.parquet  2025-01-27.parquet  2025-01-30.parquet
Flights/022025/: 2025-02-04.parquet  2025-02-06.parquet  2025-02-07.parquet  2025-02-08.parquet  2025-02-09.parquet  2025-02-12.parquet  2025-02-19.parquet  2025-02-20.parquet  2025-02-21.parquet  2025-02-22.parquet  2025-02-24.parquet  2025-02-25.parquet  2025-02-27.parquet
Flights/032025/: 2025-03-01.parquet  2025-03-02.parquet  2025-03-03.parquet  2025-03-04.parquet  2025-03-05.parquet  2025-03-06.parquet  2025-03-07.parquet  2025-03-08.parquet  2025-03-09.parquet  2025-03-10.parquet  2025-03-11.parquet  2025-03-12.parquet  2025-03-13.parquet  2025-03-14.parquet  2025-03-15.parquet  2025-03-17.parquet  2025-03-18.parquet  2025-03-19.parquet  2025-03-20.parquet  2025-03-21.parquet  (+7 more)
Statistics/: 2025-01-flights.parquet  2025-02-flights.parquet
data/: plots.ipynb
model/: labeling_app.py  model_evaluation.ipynb  model_training.ipynb
(+29 files in other folders)
